new character classes - preparations for new spell database